Add sections to the introduction chapter
Copied some sections from README.org.

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -6,6 +6,37 @@ for thousands of individuals and millions of (imputed) genotypes
 within a reasonable time frame (think days instead of months or
 years).
 
+\section{Support}
+Community support for \oanomm can be found on the
+\href{http://forum.genabel.org}{GenABEL forum}. Feel free to ask your
+questions there and to contribute with your own knowledge and skills.
+
+Commercial support for \oannomm can be obtained via
+\href{http://www.polyomica.com}{PolyOmica}. Typical things PolyOmica
+can help you with are installing \oanomm on your server or
+cluster, or the development of custom features.
+
+\section{Contributing}
+\oanomm is a free software project, we therefore welcome contributions
+of all kind. Development takes place
+\href{https://github.com/GenABEL-Project/OmicABELnoMM}{on GitHub},
+where you will find the source code and
+\href{https://github.com/GenABEL-Project/OmicABELnoMM/issues}{the list
+  of bugs}. Feel free to submit your bug reports or feature requests
+there, or, even better, fork the project and start fixing those bugs.
+Development discussions take place on
+\href{https://lists.r-forge.r-project.org/mailman/listinfo/genabel-devel}{the
+  GenABEL development mailing list}. We are looking forward to working
+with you!
+
+\section{Licence}
+\oanomm is free software licensed under the
+\href{https://www.gnu.org/licenses/gpl.html}{GNU Generap Public
+  License v3}. A copy of the licence can be found in the file
+|COPYING|.
+
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "UserGuide"
