--- a/doc/installation.tex
+++ b/doc/installation.tex
@@ -57,9 +57,9 @@ linear algebra and other math.
   \item \acs{BLAS} (required): a linear algebra library. We tested OpenBLAS,
   \item LAPACKe (required): The C interface to LAPACK, the linear
     algebra package.
-  \item Boost (required): For the calculation of p-values \oanomm needs the
-    Boost-math part of the Boost library\footnote{The Boost library
-      can be foundt at \url{}}.
+  \item Boost (required): For the calculation of $p$-values \oanomm
+    needs the Boost-math part of the Boost library\footnote{The Boost
+      library can be foundt at \url{http://www.boost.org}}.
   \item \ac{ACML} (optional): if the \ac{ACML} is found,
     it will be used where possible.
   \item Intel \ac{MKL} (optional): if the \ac{MKL} is
@@ -110,12 +110,12 @@ specified folder.
 
 The latest release from the OpenBLAS library can be found at
 \url{https://github.com/xianyi/OpenBLAS/releases}. At the time of
-writing this is is version 0.2.15. Download the |tar.gz| file to the
+writing this is is version 0.2.18. Download the |tar.gz| file to the
 server and decompress the archive:
 \begin{lstlisting}[basicstyle=\footnotesize\ttfamily]
-wget https://github.com/xianyi/OpenBLAS/archive/v0.2.15.tar.gz
-tar -xzf v0.2.15.tar.gz
-cd OpenBLAS-0.2.15
+wget https://github.com/xianyi/OpenBLAS/archive/v0.2.18.tar.gz
+tar -xzf v0.2.18.tar.gz
+cd OpenBLAS-0.2.18
 \end{lstlisting}
 
 Alternatively, you can download the development version from GitHub:
