--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -11,7 +11,7 @@ Community support for \oanomm can be found on the
 \href{http://forum.genabel.org}{GenABEL forum}. Feel free to ask your
 questions there and to contribute with your own knowledge and skills.
 
-Commercial support for \oannomm can be obtained via
+Commercial support for \oanomm can be obtained via
 \href{http://www.polyomica.com}{PolyOmica}. Typical things PolyOmica
 can help you with are installing \oanomm on your server or
 cluster, or the development of custom features.
