Fix typo in manual (same as in commit b240582)

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -31,7 +31,7 @@ with you!
 
 \section{Licence}
 \oanomm is free software licensed under the
-\href{https://www.gnu.org/licenses/gpl.html}{GNU Generap Public
+\href{https://www.gnu.org/licenses/gpl.html}{GNU General Public
   License v3}. A copy of the licence can be found in the file
 |COPYING|.
 
